# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add remaining core logic to Haskell CloudI API beginnings
    * Add Forward return values to both the OCaml and Haskell CloudI APIs
      to be similar to the Erlang CloudI API return values

2017-03-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve OCaml CloudI API internal type usage
    * Add basic callback logic to Haskell CloudI API beginnings
      (currently requires GHC >= 7.10.3)

2017-03-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the Haskell CloudI API beginning to initialize/terminate properly

2017-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the beginnings of the http_req Haskell integration test
    * Improve Go and Ocaml integration tests makefiles

2017-03-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the beginnings of the Haskell CloudI API

2017-03-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve OCaml CloudI API callback type usage
    * Remove files duplicated in src/external/
    * Update NOTICE file

2017-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve OCaml CloudI API poll timeout handling

2017-03-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * C, Go, OCaml CloudI API change
      (breaks previous use of the C CloudI API) to keep state data
      within the CloudI API instance while using the same callback
      function argument order used by the Erlang CloudI API
        * The consistent interface CloudI provides with the CloudI API for
          CloudI service request data is:
          (RequestType, Name, Pattern, RequestInfo, Request,
           Timeout, Priority, TransId, Source)
          with the (State, API) data before the service request data in
          programming languages that use object methods
          (State is the object) or after the service request data in