@@ -18,5 +18,7 @@ executable           http_req_haskell
   ghc-options:       -Wall -Werror -funbox-strict-fields -threaded
   build-depends:       base >= 4.6.0.1
                      , cloudi == @VERSION@
+                     , bytestring
+                     , containers
   default-language:  Haskell2010
 
