@@ -3,9 +3,10 @@
 
 2017-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>
 
-    * Add remaining core logic to Haskell CloudI API beginnings
+    * Add the remaining core logic to Haskell CloudI API
     * Add Forward return values to both the OCaml and Haskell CloudI APIs
       to be similar to the Erlang CloudI API return values
+    * Complete the http_req integration test in Haskell
 
 2017-03-20 Michael Truog   <mjtruog [at] gmail (dot) com>
 
